# ragamuffin

./: README.md  pyproject.toml
.github/workflows/: run-ci.yaml
src/ragamuffin/: __init__.py  cli.py  error_handling.py  progress_bar.py  rich.py  settings.py
src/ragamuffin/cli/: muffin.py  utils.py
src/ragamuffin/libraries/: files.py  git_repo.py  interface.py  local.py  utils.py  zotero.py
src/ragamuffin/models/: enhancer.py  highlighter.py  model_picker.py  select.py
src/ragamuffin/nlp/: highlighter.py
src/ragamuffin/storage/: cassandra.py  file.py  interface.py  utils.py
src/ragamuffin/webui/: gradio_chat.py  style.css  styles.css
tests/: test_cli.py  test_libraries_files.py  test_storage_file.py  utils.py
tests/data/udhr/: udhr-pl.txt
